# blog_web

./: .pre-commit-config.yaml  blog_data.json  database_schema.sql  er_diagram.md  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_hooks.py  storage.py
templates/: api_info.html  base.html  create_post.html  edit_post.html  index.html  post.html  users.html
